 - Fix listtags to show tags using smarty_nocache_  function name prefix.
 - Improvements to the {form_start} plugin.
 - Fix silly, old issue in recursive_delete function.
 - Clean up more parameters from the content tag before passing to module action.
 - Fix local file inclusion vulnerability in listtags.

AdminSearch v1.0.3
 - Now search the metadata field of content pages.

DesignManager v1.1.3
 - Set title attribute tags for edit/create template, stylesheet, design.
 - Remove debug statements.

MicroTiny v2.2
 - Upgrade tinymce to v4.6.x.
 - Adds new tabfocus and hr plugins.

News v2.51.2
 - Fixes so that all cancel buttons work properly on new news articles.

Navigator v1.0.7
 - Adds a silly __get() method to the NavigatorNode class squash some notifications in the error logs.

ModuleManager v2.1.1
 - Now handlle remote module installs upgrades, and activates via a 2 request process to allow new module versions to be read into memory.

Installation Assistant v1.3.2
 - Correction to assets warning

Search v1.51.2
 - Now do an html entity decode on all content added to AddWords.

Version 2.2.1 - Hearts Desire
----------------------------------
Core - General
 - Improve the Smarty plugin loading to handle non-cachable plugins in the /assets/plugins and /plugins directories.
 - Fixes to transaction functions in database abstraction library.
 - Fix CMSModule::GetTemplateResource to no longer accept eval or string resources.
 - Fix CMSSmartySecurityPolicy so that debug_to_log is no longer an allowed function.

   Many thanks to Daniel Le Gall from SCRT SA, Switzerland for reporting the vulnerabilities.

Installation Assistant v1.3.1
 - On upgrade to 2.2.1 move all files from /plugins to /assets/plugins (they should only be third party plugins at this point).
 - On upgrade chmod the config.php to 444.

MicroTiny v2.1.1
 - Fix temporary JS call URL.

News v2.51.1
 - Fix frontend pagination.


Version 2.2 - Canada
----------------------------------
Core - General