@@ -38,6 +38,8 @@ function begin_section($id,$txt,$desc = '')
 
 function add_result($listid,$content,$title,$url,$text = '')
 {
+	$title = addslashes($title);
+	$content = addslashes($content);
   $tmp = "parent.add_result('{$listid}','{$content}','{$title}','{$url}','{$text}');";
   echo '<script type="text/javascript">'.$tmp.'</script>';
 }
@@ -79,6 +81,7 @@ if( is_array($slaves) && count($slaves) ) {
         if( is_array($results) && count($results) ) {
             begin_section($one_slave['class'],$obj->get_name(),$obj->get_section_description());
             foreach( $results as $one ) {
+	        debug_to_log($one);
                 $text = isset($one['text'])?$one['text']:'';
                 if( $text ) $text = addslashes($text);
                 $url = isset($one['edit_url'])?$one['edit_url']:'';
